--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Manuel Alcazar",
   "license": "ISC",
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "sass": "^1.69.5"
   }
 }
